--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Examen React - Amigos</title>
+    <title>Lista Compra</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
